add list of insurance by hospital id
