# storage/api-docs/api-docs.json
@@ -23,7 +23,7 @@
         "/api/v1/admin/queue/update-status": {
             "post": {
                 "tags": [
-                    "Queue Process"
+                    "Admin"
                 ],
                 "summary": "\n    Update Status Queue\n    const waiting = 0;\n    const checkIn = 1;\n    const checkOut = 2;\n    const skipped = 3;",
                 "operationId": "storequeue",
@@ -220,6 +220,20 @@
                 ],
                 "summary": "Get hospital list by query",
                 "operationId": "profile",
+                "responses": {
+                    "default": {
+                        "description": "successful operation"
+                    }
+                }
+            }
+        },
+        "/api/v1/insurance/{hospital_id}": {
+            "get": {
+                "tags": [
+                    "Insurance"
+                ],
+                "summary": "List of insurance",
+                "operationId": "App\\Http\\Controllers\\Api\\InsuranceController::index",
                 "responses": {
                     "default": {
                         "description": "successful operation"
